external-crates/move/crates/move-compiler/tests/development/enums/matching/invalid_head_ctor_3.exp
error[E03003]: unbound module member
   ┌─ tests/development/enums/matching/invalid_head_ctor_3.move:16:13
   │
16 │             l::a(_) => (),
   │             ^^^^ Invalid module access. Unbound struct 'a' in module '0x42::l'

